Zeplin Type Changed Screens

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -12,9 +12,9 @@
         android:id="@+id/layoutNewPassword"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="30dp"
-        android:paddingTop="20dp"
-        android:paddingRight="30dp">
+        android:paddingLeft="@dimen/_21sdp"
+        android:paddingTop="@dimen/_45sdp"
+        android:paddingRight="@dimen/_21sdp">
 
         <RelativeLayout
             android:id="@+id/layoutClose"
@@ -26,8 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginTop="20dp"
-                android:src="@drawable/ic_close"></ImageView>
+                android:src="@drawable/ic_close"/>
         </RelativeLayout>
 
         <TextView
@@ -36,27 +35,26 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/layoutClose"
             android:fontFamily="@font/opensans_bold"
-            android:text="Create New Password"
+            android:text="@string/create_new_password"
             android:textColor="@color/black"
-            android:textSize="@dimen/text_size_24sp"></TextView>
+            android:textSize="@dimen/_16ssp"/>
 
         <TextView
             android:id="@+id/tvMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvHead"
-            android:layout_marginTop="20dp"
             android:fontFamily="@font/opensans_regular"
             android:text="@string/chpwdmsg"
             android:textColor="@color/text_color"
             android:textSize="@dimen/text_size_18sp"
-            android:visibility="gone"></TextView>
+            android:visibility="gone"/>
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/tvMessage"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/_14sdp"
             android:fillViewport="true"
             android:scrollbars="none">
 
@@ -67,18 +65,18 @@
                 <RelativeLayout
                     android:id="@+id/layoutPwd"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp">
+                    android:layout_height="@dimen/_40sdp">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/etlPassword"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="New Password"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
-                        app:boxCornerRadiusTopStart="10dp"
+                        android:hint="@string/new_password"
+                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                        app:boxCornerRadiusTopStart="@dimen/_10sdp"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
                         app:expandedHintEnabled="false"
@@ -97,7 +95,7 @@
                             android:inputType="textPassword"
                             android:maxLength="20"
                             android:textColor="@color/text_color"
-                            android:textSize="@dimen/text_size_18sp" />
+                            android:textSize="@dimen/_11sdp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -106,36 +104,36 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginBottom="3dp"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:layout_marginRight="@dimen/_10sdp"
+                        android:layout_marginBottom="@dimen/_3sdp"
                         android:orientation="horizontal"
                         android:visibility="gone">
 
                         <View
                             android:id="@+id/strengthOne"
                             android:layout_width="match_parent"
-                            android:layout_height="3dp"
+                            android:layout_height="@dimen/_3sdp"
                             android:layout_weight="1"
-                            android:background="@color/error"></View>
+                            android:background="@color/error"/>
 
                         <View
                             android:id="@+id/strengthTwo"
                             android:layout_width="match_parent"
-                            android:layout_height="3dp"
-                            android:layout_marginLeft="5dp"
+                            android:layout_height="@dimen/_3sdp"
+                            android:layout_marginLeft="@dimen/_5sdp"
                             android:layout_weight="1"
                             android:background="@color/error"
-                            android:visibility="invisible"></View>
+                            android:visibility="invisible"/>
 
                         <View
                             android:id="@+id/strengthThree"
                             android:layout_width="match_parent"
-                            android:layout_height="3dp"
-                            android:layout_marginLeft="5dp"
+                            android:layout_height="@dimen/_3sdp"
+                            android:layout_marginLeft="@dimen/_5sdp"
                             android:layout_weight="1"
                             android:background="@color/error"
-                            android:visibility="invisible"></View>
+                            android:visibility="invisible"/>
                     </LinearLayout>
                 </RelativeLayout>
 
@@ -144,12 +142,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/layoutPwd"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:text="Must be 8-12 characters, 1 uppercase, 1 number, 1 lower case, 1 special character."
                     android:textColor="@color/error"
-                    android:textSize="@dimen/text_size_14sp"
-                    android:visibility="gone"></TextView>
+                    android:textSize="@dimen/_10sdp"
+                    android:visibility="gone"/>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/etlCPassword"
@@ -157,12 +155,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/tvPasswordInfo"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:hint="Confirm Password"
-                    app:boxCornerRadiusBottomEnd="10dp"
-                    app:boxCornerRadiusBottomStart="10dp"
-                    app:boxCornerRadiusTopEnd="10dp"
-                    app:boxCornerRadiusTopStart="10dp"
+                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                    app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_green"
                     app:errorIconDrawable="@null"
                     app:expandedHintEnabled="false"
@@ -176,7 +174,7 @@
                         android:layout_height="wrap_content"
                         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890.!@#$%^_+-*?/;:'"
                         android:fontFamily="@font/opensans_semibold"
-                        android:hint=""
+                        android:hint="@string/confirm_password"
                         android:imeOptions="actionDone"
                         android:inputType="textPassword|textMultiLine"
                         android:maxLength="20"
@@ -188,11 +186,11 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cvSave"
                     android:layout_width="match_parent"
-                    android:layout_height="64dp"
+                    android:layout_height="@dimen/_45sdp"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="30dp"
+                    android:layout_marginBottom="@dimen/_27sdp"
                     app:cardBackgroundColor="@color/primary_green"
-                    app:cardCornerRadius="32dp">
+                    app:cardCornerRadius="@dimen/_22sdp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -201,7 +199,7 @@
                         android:fontFamily="@font/opensans_bold"
                         android:text="Save"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/text_size_18sp"></TextView>
+                        android:textSize="@dimen/_12ssp"/>
                 </androidx.cardview.widget.CardView>
             </RelativeLayout>
         </ScrollView>
@@ -221,7 +219,7 @@
             android:layout_above="@+id/tvDone"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="30dp"
-            android:src="@drawable/ic_success_icon"></ImageView>
+            android:src="@drawable/ic_success_icon"/>
 
         <TextView
             android:id="@+id/tvDone"
@@ -231,27 +229,27 @@
             android:fontFamily="@font/opensans_bold"
             android:text="All Done"
             android:textColor="@color/black"
-            android:textSize="@dimen/text_size_24sp"></TextView>
+            android:textSize="@dimen/_16ssp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvDone"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/_35sdp"
             android:gravity="center"
             android:text="Your password has been successfully updated."
             android:textColor="@color/text_color"
-            android:textSize="@dimen/text_size_18sp"></TextView>
+            android:textSize="@dimen/_12ssp"/>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvLogin"
             android:layout_width="match_parent"
-            android:layout_height="64dp"
+            android:layout_height="@dimen/_45sdp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="@dimen/_29sdp"
             app:cardBackgroundColor="@color/primary_green"
-            app:cardCornerRadius="32dp">
+            app:cardCornerRadius="@dimen/_21sdp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -260,7 +258,7 @@
                 android:fontFamily="@font/opensans_bold"
                 android:text="Log in"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_size_18sp"></TextView>
+                android:textSize="@dimen/_12ssp"/>
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
