--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:paddingLeft="30dp"
-    android:paddingTop="20dp"
-    android:paddingRight="30dp"
+    android:paddingTop="@dimen/_45sdp"
+    android:paddingRight="@dimen/_22sdp"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.ForgotPasswordActivity">
 
@@ -21,7 +21,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginTop="20dp"
             android:src="@drawable/ic_close"></ImageView>
     </RelativeLayout>
 
@@ -33,13 +32,13 @@
         android:fontFamily="@font/opensans_bold"
         android:text="Forgot Your Password?"
         android:textColor="@color/black"
-        android:textSize="24sp"></TextView>
+        android:textSize="@dimen/_16ssp"></TextView>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tvHead"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/_14sdp"
         android:fillViewport="true"
         android:scrollbars="none">
 
@@ -52,9 +51,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_regular"
-                android:text="Before we can reset your password, we will need to verify your identity. Please enter the email register with your account."
+                android:lineSpacingExtra="@dimen/_5sdp"
+                android:text="@string/forgot_content"
                 android:textColor="@color/text_color"
-                android:textSize="18sp"></TextView>
+                android:textSize="@dimen/_12ssp"></TextView>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/etlEmail"
@@ -62,13 +62,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvMessage"
-                android:layout_marginTop="20dp"
-                android:hint="Email"
+                android:layout_marginTop="@dimen/_21sdp"
+                android:hint="@string/email"
                 android:textColorHint="@color/text_color"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
+                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                 app:boxStrokeColor="@color/primary_green"
                 app:errorIconDrawable="@null"
                 app:expandedHintEnabled="false"
@@ -79,13 +79,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
-                    android:hint="Email"
+                    android:hint="@string/email"
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:maxLength="30"
-                    android:padding="14dp"
+                    android:padding="@dimen/_12sdp"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_18sp" />
+                    android:textSize="@dimen/_12ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -116,11 +116,11 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvNext"
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
+                android:layout_height="@dimen/_43sdp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="30dp"
                 app:cardBackgroundColor="@color/primary_green"
-                app:cardCornerRadius="32dp">
+                app:cardCornerRadius="@dimen/_21sdp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -129,7 +129,7 @@
                     android:fontFamily="@font/opensans_bold"
                     android:text="Next"
                     android:textColor="@color/white"
-                    android:textSize="18sp"></TextView>
+                    android:textSize="@dimen/_12ssp"></TextView>
             </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
