--- a/app/src/main/res/layout/activity_retry_create_account.xml
+++ b/app/src/main/res/layout/activity_retry_create_account.xml
@@ -25,12 +25,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="22dp"
+            android:layout_marginTop="@dimen/_35sdp"
+            android:layout_marginBottom="@dimen/_22sdp"
             android:fontFamily="@font/opensans_bold"
-            android:text="Retry Create Account"
+            android:text="@string/retry_create_account"
             android:textColor="@color/primary_black"
-            android:textSize="@dimen/text_size_16sp"
+            android:textSize="@dimen/_12ssp"
             android:gravity="center"/>
 
         <TextView
@@ -38,29 +38,29 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
             android:fontFamily="@font/opensans_regular"
-            android:text="Error: Look like we are having an issue with your OTP request, please retry again later."
+            android:text="@string/retry_account"
             android:textColor="@color/primary_black"
-            android:textSize="@dimen/text_size_12sp" />
+            android:textSize="@dimen/_12ssp" />
     </LinearLayout>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/tryAgainCV"
         android:layout_width="match_parent"
-        android:layout_height="43dp"
+        android:layout_height="@dimen/_43sdp"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="@dimen/_50sdp"
+        android:layout_marginBottom="@dimen/_26sdp"
         app:cardBackgroundColor="@color/primary_color"
-        app:cardCornerRadius="22dp">
+        app:cardCornerRadius="@dimen/_21sdp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Try Again"
+            android:text="@string/try_again"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_12sp"
+            android:textSize="@dimen/_12ssp"
             android:textStyle="bold" />
     </com.google.android.material.card.MaterialCardView>
 
