--- a/app/src/main/res/layout/profileqrcode.xml
+++ b/app/src/main/res/layout/profileqrcode.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F2F4F5"
-    android:paddingBottom="20dp">
+    android:paddingBottom="@dimen/_20sdp">
 
     <LinearLayout
         android:id="@+id/layoutHead"
@@ -12,24 +12,24 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bottomradius"
         android:orientation="vertical"
-        android:paddingLeft="32dp"
-        android:paddingBottom="15dp">
+        android:paddingLeft="@dimen/_21sdp"
+        android:paddingBottom="@dimen/_15sdp">
 
         <ImageView
             android:id="@+id/imgClose"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="67dp"
+            android:layout_marginTop="@dimen/_45sdp"
             android:src="@drawable/ic_close"></ImageView>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/_14sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="My QR code"
             android:textColor="@color/black"
-            android:textSize="@dimen/text_size_24sp"></TextView>
+            android:textSize="@dimen/_16ssp"></TextView>
     </LinearLayout>
 
     <ScrollView
@@ -47,22 +47,23 @@
                 android:id="@+id/cvQRcode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_margin="@dimen/_10sdp"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="15dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="40dp">
+                    android:paddingBottom="@dimen/_37sdp">
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cvProfile"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="@dimen/_60sdp"
+                        android:layout_height="@dimen/_60sdp"
+                        android:layout_marginTop="@dimen/_14sdp"
                         android:layout_centerHorizontal="true"
                         app:cardBackgroundColor="@color/white"
-                        app:cardCornerRadius="30dp">
+                        app:cardCornerRadius="@dimen/_30sdp">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -106,14 +107,14 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:text="Jonathan Joestar"
                         android:textColor="@color/primary_black"
-                        android:textSize="@dimen/text_size_20sp"></TextView>
+                        android:textSize="@dimen/_14ssp"></TextView>
 
                     <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tvName"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="40dp"
+                        android:layout_marginTop="@dimen/_26sdp"
                         android:background="@drawable/ic_qr_img_outline">
 
                         <ImageView
@@ -121,7 +122,7 @@
                             android:layout_width="210dp"
                             android:layout_height="210dp"
                             android:layout_centerInParent="true"
-                            android:contentDescription="qr_code" />
+                            android:contentDescription="@string/qr_code" />
                     </RelativeLayout>
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
@@ -130,10 +131,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/cvQRcode"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
+                android:layout_marginLeft="@dimen/_11sdp"
+                android:layout_marginRight="@dimen/_11sdp"
                 app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="15dp">
+                app:cardCornerRadius="@dimen/_10sdp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -149,7 +150,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="Recipient’s Address"
                         android:textColor="@color/xdark_gray"
-                        android:textSize="@dimen/text_size_16sp"></TextView>
+                        android:textSize="@dimen/_11ssp"></TextView>
 
                     <TextView
                         android:id="@+id/tvWalletAddress"
@@ -159,23 +160,23 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:text="f4184fc596403b9d6…"
                         android:textColor="#404040"
-                        android:textSize="@dimen/text_size_14sp"></TextView>
+                        android:textSize="@dimen/_10ssp"></TextView>
 
                     <View
                         android:id="@+id/divider"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_below="@+id/tvWalletAddress"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="@dimen/_20sdp"
                         android:background="@color/at_gray"></View>
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/divider"
-                        android:layout_marginTop="35dp"
-                        android:paddingLeft="50dp"
-                        android:paddingRight="50dp">
+                        android:layout_marginTop="@dimen/_25sdp"
+                        android:paddingLeft="@dimen/_40sdp"
+                        android:paddingRight="@dimen/_35sdp">
 
                         <ImageView
                             android:id="@+id/imgCopy"
@@ -190,7 +191,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:text="Copy"
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/text_size_16sp"></TextView>
+                            android:textSize="@dimen/_11ssp"></TextView>
 
                         <ImageView
                             android:id="@+id/imgShare"
@@ -206,8 +207,9 @@
                             android:layout_alignParentRight="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:text="Share"
+
                             android:textColor="@color/primary_black"
-                            android:textSize="@dimen/text_size_16sp"></TextView>
+                            android:textSize="@dimen/_11ssp"></TextView>
                     </RelativeLayout>
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
