--- a/app/src/main/res/layout/retrieve_email_foundaccount_layout.xml
+++ b/app/src/main/res/layout/retrieve_email_foundaccount_layout.xml
@@ -31,19 +31,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_36sdp"
-        android:gravity="center"
         android:fontFamily="@font/opensans_bold"
+        android:gravity="center"
         android:text="@string/foundacc"
         android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp"
-         />
+        android:textSize="@dimen/_16ssp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_18sdp"
-        android:gravity="center"
         android:fontFamily="@font/opensans_regular"
+        android:gravity="center"
         android:text="@string/belowtxtre"
         android:textAlignment="center"
         android:textColor="@color/primary_black"
@@ -52,16 +51,14 @@
     <LinearLayout
         android:id="@+id/llCoyniAct"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/_67sdp"
         android:layout_marginStart="@dimen/_11sdp"
         android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_11sdp"
         android:background="@drawable/bg_card"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/_18sdp"
-        android:paddingEnd="@dimen/_8sdp"
-        android:paddingTop="@dimen/_17sdp">
+        android:paddingRight="@dimen/_8sdp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -70,28 +67,28 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="14dp">
+            android:paddingLeft="@dimen/_20sdp"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:fontFamily="@font/opensans_semibold"
                 android:text="@string/coyni_account"
                 android:textAlignment="textStart"
-                android:fontFamily="@font/opensans_semibold"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp"
-                />
+                android:textSize="@dimen/_12ssp" />
 
             <TextView
+                android:id="@+id/tvEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
-                android:text="@string/jona_gmail_com"
                 android:fontFamily="@font/opensans_regular"
+                android:text="@string/jona_gmail_com"
                 android:textAlignment="textStart"
                 android:textColor="#767676"
                 android:textSize="@dimen/_10ssp" />
