--- a/app/src/main/res/layout/retrieve_email_tryagain_layout.xml
+++ b/app/src/main/res/layout/retrieve_email_tryagain_layout.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_marginStart="30dp"
     android:layout_marginEnd="32dp"
-    android:layout_height="match_parent"
-
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/reTryAgainLL"
@@ -32,8 +30,7 @@
             android:gravity="center"
             android:text="@string/sorrytxt"
             android:textColor="@color/black"
-            android:textSize="@dimen/_16ssp"
-            />
+            android:textSize="@dimen/_16ssp" />
 
     </LinearLayout>
 
@@ -41,22 +38,21 @@
         android:id="@+id/reTryAgainBtn"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_44sdp"
-        app:cardBackgroundColor="@color/primary_color"
-        android:gravity="center"
-        app:cardCornerRadius="@dimen/_22sdp"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/_28sdp"
-        >
+        android:gravity="center"
+        app:cardBackgroundColor="@color/primary_color"
+        app:cardCornerRadius="@dimen/_22sdp">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/opensans_bold"
+            android:gravity="center"
             android:text="@string/tryagain"
             android:textColor="@color/white"
-            android:gravity="center"
-            android:fontFamily="@font/opensans_bold"
-            android:layout_gravity="center"
-            android:textSize="@dimen/_12ssp"
-            />
+            android:textSize="@dimen/_12ssp" />
     </androidx.cardview.widget.CardView>
 
 </RelativeLayout>
